--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "vuesite",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
+  },
   "dependencies": {
+    "@google/generative-ai": "^0.11.4",
+    "gsap": "^3.12.5",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
     "@titaniumnetwork-dev/ultraviolet": "^3.2.6",
     "@tomphttp/bare-server-node": "^2.0.3",
     "wisp-server-node": "^1.1.3",
@@ -8,5 +23,14 @@
     "@mercuryworkshop/bare-as-module3": "^2.2.2",
     "express": "^4.18.2"
   },
-  "type": "module"
+  "devDependencies": {
+    "@rushstack/eslint-patch": "^1.8.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
+    "prettier": "^3.2.5",
+    "vite": "^5.2.8",
+    "vite-plugin-vue-devtools": "^7.0.25"
+  }
 }
