--- a/package.json
+++ b/package.json
@@ -1,12 +1,33 @@
 {
+  "name": "vuesite",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
+  },
   "dependencies": {
-    "@titaniumnetwork-dev/ultraviolet": "^3.2.6",
-    "@tomphttp/bare-server-node": "^2.0.3",
-    "wisp-server-node": "^1.1.3",
+    "@mercuryworkshop/bare-as-module3": "^2.2.2",
     "@mercuryworkshop/bare-mux": "^2.0.3",
     "@mercuryworkshop/epoxy-transport": "^2.1.3",
-    "@mercuryworkshop/bare-as-module3": "^2.2.2",
-    "express": "^4.18.2"
+    "@titaniumnetwork-dev/ultraviolet": "^3.2.6",
+    "@tomphttp/bare-server-node": "^2.0.3",
+    "express": "^4.18.2",
+    "pnpm": "^9.13.2",
+    "wisp-server-node": "^1.1.3"
   },
-  "type": "module"
+  "devDependencies": {
+    "@rushstack/eslint-patch": "^1.8.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
+    "prettier": "^3.2.5",
+    "vite": "^5.2.8",
+    "vite-plugin-vue-devtools": "^7.0.25"
+  }
 }
