--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tomphttp/bare-server-node": "^2.0.5",
     "express": "^4.21.1",
     "gsap": "^3.12.5",
+    "lint": "^0.8.19",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
     "wisp-server-node": "^1.1.7"
